--- a/MyProjectMaven/pom.xml
+++ b/MyProjectMaven/pom.xml
@@ -143,4 +143,19 @@
       </plugin>
     </plugins>
   </build>
+
+  <dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>2.1.214</version>  <!-- проверьте версию на момент загрузки -->
+  </dependency>
+
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+  </dependency>
+  <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+  </dependency>
 </project>
