--- a/MyProjectMaven/src/main/java/ru/geekbrain/application.yml
+++ b/MyProjectMaven/src/main/java/ru/geekbrain/application.yml
@@ -16,3 +16,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+scrape_configs:
+  - job_name: 'spring-boot-app'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['localhost:8080']  #todo Укажите адрес и порт вашего приложения
